src/test/deca/context/invalid/homemade/return_void.deca
// trying to return on void method

class A {
    void x() {return 2;}
}
